2012-04-27 Dario Rodriguez <dario.rodriguez@artica.es>

 	* unix/plugins/inventory: Fixed a small error related to inventory plugin

2012-04-27 Dario Rodriguez <dario.rodriguez@artica.es>

	* unix/plugins/inventory,
	unix/Linux/pandora_agent.conf: Inventory improved: added Mac to NIC, 
	created new modules for IPs and Route table. Update pandora agent conf.

2012-04-26 Dario Rodriguez <dario.rodriguez@artica.es>

	* unix/plugins/inventory: Fixed inventory plugin

2012-04-25 Dario Rodriguez <dario.rodriguez@artica.es>

	* unix/Linux/pandora_agent.conf: Improved linux configuration file.

2012-04-25  Sergio Martin <sergio.martin@artica.es>

	* unix/plugins/inventory: Fixed method of obtain
	runlevel to be valid on OpenSuse

2012-04-25  Sergio Martin <sergio.martin@artica.es>

	* unix/plugins/inventory: Fixed init_services inventory modules
	in machines /etc/rc.d/rcX.d paths instead of /etc/rcX.d/ paths

2012-04-25  Sergio Martin <sergio.martin@artica.es>

	* unix/plugins/inventory: Fixed several bugs in the
	inventory plugin as missed separator to end the parse,
	fill with empty string the empty columns, etc. for bug 3519796

2012-04-25 Dario Rodriguez <dario.rodriguez@artica.es>

	* win32/bin/pandora_agent.conf: Fixed a default module type.

2012-04-25 Dario Rodriguez <dario.rodriguez@artica.es>

	* win32/bin/pandora_agent.conf: Improved windows configuration file.

2012-04-24 Dario Rodriguez <dario.rodriguez@artica.es>

	* unix/Linux/pandora_agent.conf: Added more modules by default and 
	more examples of modules and parameters with comments

2012-04-24 Dario Rodriguez <dario.rodriguez@artica.es>

	* win32/bin/pandora_agent.conf: Added more modules by default and 
	more examples of modules and parameters with comments

2012-04-23 Dario Rodriguez <dario.rodriguez@artica.es>

	* win32/bin/pandora_agent.conf: Added "parent_agent_name" parameter
	which was missing for windows configuration file.

2012-04-20 Dario Rodriguez <dario.rodriguez@artica.es>
