@@ -1,3 +1,8 @@
+2012-05-03  Sergio Martin <sergio.martin@artica.es>
+
+	* win32/windows/pandora_wmi.cc: Added service pack column
+	to the windows agent inventory module for patches
+
 2012-04-27 Dario Rodriguez <dario.rodriguez@artica.es>
 
  	* unix/plugins/inventory: Fixed a small error related to inventory plugin
